Bug 162730 - Improperly overlaid text on DOCX import
Summary: Improperly overlaid text on DOCX import
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.5.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2024-08-31 21:09 UTC by Lynn Walls
Modified: 2025-10-20 15:33 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
MS-Word created .docx file that does not display/print properly in Writer. (121.24 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-08-31 21:13 UTC, Lynn Walls
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lynn Walls 2024-08-31 21:09:57 UTC
Description:
Some text in the attached docx file overlays other text.  The printout is also improperly overlaid.  This docx is handled CORRECTLY by AbleWord amd MS WORD.

Steps to Reproduce:
1.Open docx in Writer.
2.
3.

Actual Results:
Jus openthe attached .docx file to see the corruption.  It's obvious.

Expected Results:
Text should not be overlaid.


Reproducible: Always


User Profile Reset: No

Additional Info:
None.  Just open the attached .docx in Writer.
Comment 1 Lynn Walls 2024-08-31 21:13:03 UTC
Created attachment 196152 [details]
MS-Word created .docx file that does not display/print properly in Writer.
Comment 2 m_a_riosv 2024-08-31 23:33:33 UTC
Reproducible
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 47fbbd7c6b9ea6b4a20f05fdf8870cb9e125fb21
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Latest version that works on the ones I have installed.
Version: 6.4.7.2 (x64)
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: GL; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US
Calc: CL
Comment 3 raal 2024-09-02 14:55:09 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.2$.
Adding Cc: to Miklos Vajna ; Could you possibly take a look at this one?
Thanks
 50e5c531baba35a2ea68a8d5e3a56a69650c3318 is the first bad commit
commit 50e5c531baba35a2ea68a8d5e3a56a69650c3318
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Sep 15 15:34:54 2023 +0200

    source 2d43c34333076fad092f0cdc0f60f81580acdbee


156937: Related: tdf#55160 sw floattable, nested DOCX imp: fix inner tbl at cell start | https://gerrit.libreoffice.org/c/core/+/156937
Comment 4 Miklos Vajna 2024-12-11 08:25:51 UTC
By now I think there are some 3 sw floattable bugs like this in the bugzilla. Unfortunately these are far from trivial to fix. I hope to find time to progress with them in the not too distant future.
Comment 5 Commit Notification 2025-10-16 15:08:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/25ab6816990b688bf12004280664fb3810996f1c

tdf#162730 sw floattable: fix when inside an inline table, with hide mark

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-10-20 15:33:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/153a8942c7c9070dbcbb398d90f126ea5ba1a775

tdf#162730 sw floattable: fix when inside an inline table, with hide mark

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.