tdf#162730 sw floattable: fix when inside an inline table, with hide mark

Open the bugdoc, it has an outer inline table, then an inner floating
table. The inner table is split, but both parts of it stay on page 1,
leading to overlapping text.

This document's outer table has a single row and a single cell, but the
cell has a <w:hideMark> property. If that's missing, the inner floating
table is split properly.

Fix the problem by ignoring <w:hideMark> in case the cell's only content
is a floating table: in this case setting the row's size type to "fix"
would not be correct anyway.

Regression from commit 2d43c34333076fad092f0cdc0f60f81580acdbee
(Related: tdf#55160 sw floattable, nested DOCX imp: fix inner tbl at
cell start, 2023-09-15).

Change-Id: Ia9759a1c8ebaaa22b547a5ff250fa9dcf7ffbe4a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192512
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 25ab6816990b688bf12004280664fb3810996f1c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192716
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>